--- a/osdi.html
+++ b/osdi.html
@@ -63,6 +63,7 @@
             <div class="osdi">
                 <div class="container">
                     <div class="osdi__inner quiz">
+                        <div class="current"></div>
                         <div class="osdi__item quiz__item active" data-item="1">
                             <div class="quiz__title">
                                 Повышенная чувствительность к свету
@@ -83,7 +84,61 @@
                         </div>
                         <div class="osdi__item quiz__item" data-item="2">
                             <div class="quiz__title">
-                                Повышенная чувствительность к свету
+                                Ощущение песка в глазах
+                            </div>
+                            <div class="quiz__subtitle">
+                                Сталкивались ли вы со следующими симптомами на протяжении последней недели?
+                            </div>
+                            <small>
+                                Выберите подходящий вариант:
+                            </small>
+                            <ul>
+                                <li data-value="4" class="btn btn-light">Все время</li>
+                                <li data-value="3" class="btn">Довольно часто</li>
+                                <li data-value="2" class="btn">Половину времени</li>
+                                <li data-value="1" class="btn">Иногда</li>
+                                <li data-value="0" class="btn">Никогда</li>
+                            </ul>
+                        </div>
+                        <div class="osdi__item quiz__item" data-item="3">
+                            <div class="quiz__title">
+                                Болезненность или воспалённые глаза
+                            </div>
+                            <div class="quiz__subtitle">
+                                Сталкивались ли вы со следующими симптомами на протяжении последней недели?
+                            </div>
+                            <small>
+                                Выберите подходящий вариант:
+                            </small>
+                            <ul>
+                                <li data-value="4" class="btn btn-light">Все время</li>
+                                <li data-value="3" class="btn">Довольно часто</li>
+                                <li data-value="2" class="btn">Половину времени</li>
+                                <li data-value="1" class="btn">Иногда</li>
+                                <li data-value="0" class="btn">Никогда</li>
+                            </ul>
+                        </div>
+                        <div class="osdi__item quiz__item" data-item="4">
+                            <div class="quiz__title">
+                                Помутнение зрения
+                            </div>
+                            <div class="quiz__subtitle">
+                                Сталкивались ли вы со следующими симптомами на протяжении последней недели?
+                            </div>
+                            <small>
+                                Выберите подходящий вариант:
+                            </small>
+                            <ul>
+                                <li data-value="4" class="btn btn-light">Все время</li>
+                                <li data-value="3" class="btn">Довольно часто</li>
+                                <li data-value="2" class="btn">Половину времени</li>
+                                <li data-value="1" class="btn">Иногда</li>
+                                <li data-value="0" class="btn">Никогда</li>
+                            </ul>
+                        </div>
+                        <div class="osdi__item quiz__item" data-item="5">
+                            <div class="quiz__title">
+                                Плохое зрение
                             </div>
                             <div class="quiz__subtitle">
                                 Сталкивались ли вы со следующими симптомами на протяжении последней недели?
@@ -105,7 +160,7 @@
                             <li class="pass" data-item="quest-1"></li>
                             <li data-item="quest-2"></li>
                         </ul>
-                        <a href="#" class="btn btn-light">Далее</a>
+                        <a data-next href="#" class="btn btn-light">Далее</a>
                     </div>
                 </div>
             </div>
