--- a/osdi.html
+++ b/osdi.html
@@ -75,7 +75,7 @@
                                 Выберите подходящий вариант:
                             </small>
                             <ul>
-                                <li data-value="4" class="btn btn-light">Все время</li>
+                                <li data-value="4" class="btn">Все время</li>
                                 <li data-value="3" class="btn">Довольно часто</li>
                                 <li data-value="2" class="btn">Половину времени</li>
                                 <li data-value="1" class="btn">Иногда</li>
@@ -93,7 +93,7 @@
                                 Выберите подходящий вариант:
                             </small>
                             <ul>
-                                <li data-value="4" class="btn btn-light">Все время</li>
+                                <li data-value="4" class="btn">Все время</li>
                                 <li data-value="3" class="btn">Довольно часто</li>
                                 <li data-value="2" class="btn">Половину времени</li>
                                 <li data-value="1" class="btn">Иногда</li>
@@ -111,7 +111,7 @@
                                 Выберите подходящий вариант:
                             </small>
                             <ul>
-                                <li data-value="4" class="btn btn-light">Все время</li>
+                                <li data-value="4" class="btn">Все время</li>
                                 <li data-value="3" class="btn">Довольно часто</li>
                                 <li data-value="2" class="btn">Половину времени</li>
                                 <li data-value="1" class="btn">Иногда</li>
@@ -129,7 +129,7 @@
                                 Выберите подходящий вариант:
                             </small>
                             <ul>
-                                <li data-value="4" class="btn btn-light">Все время</li>
+                                <li data-value="4" class="btn">Все время</li>
                                 <li data-value="3" class="btn">Довольно часто</li>
                                 <li data-value="2" class="btn">Половину времени</li>
                                 <li data-value="1" class="btn">Иногда</li>
@@ -147,7 +147,7 @@
                                 Выберите подходящий вариант:
                             </small>
                             <ul>
-                                <li data-value="4" class="btn btn-light">Все время</li>
+                                <li data-value="4" class="btn">Все время</li>
                                 <li data-value="3" class="btn">Довольно часто</li>
                                 <li data-value="2" class="btn">Половину времени</li>
                                 <li data-value="1" class="btn">Иногда</li>
@@ -155,13 +155,54 @@
                             </ul>
                         </div>
                     </div>
+                    <div class="quiz__result result">
+                        <div class="result__title">Значение индекса оценки состояния вашей поверхности глаза составляет
+                            <span></span>
+                        </div>
+                        <div class="result__line">
+                            <div class="result__line--ratio">
+                                <img src="assets/img/icons/marker-check.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="result__markers">
+                            <p>Норма</p>
+                            <p>Лёгкие</p>
+                            <p>Умеренные</p>
+                            <p>Тяжёлые</p>
+                        </div>
+                        <div class="result__wrapper">
+                            <div class="result__info">
+                                <p>Данная информация не является основой для постановки окончательного диагноза. Носит
+                                    лишь рекомендательно-информационный характер. Для детальной диагностики и
+                                    окончательной постановки диагноза пожалуйста проконсультируйтесь с Вашим лечащим
+                                    доктором.
+                                </p>
+                                <div class="result__info--rec">
+                                    Исходя из значения индекса OSDI рекомендует:
+                                </div>
+                                <div class="result__info--rectext">
+                                    Обратиться к офтальмологу для более тщательного обследования и рекомендации по
+                                    сохранению здоровья Ваших глаз. Пожалуйста запланируйте свой визит к врачу. Тем
+                                    временем Вы можете использовать Катионорм Юнидозы для облегчения симптомов.
+                                </div>
+                                <div class="result__btns">
+                                    <a href="#" class="btn">Найти препарат в аптеках</a>
+                                    <i class="marker"></i>
+                                    <a href="#" class="btn btn-light">Инструкция для медицинского применения</a>
+                                </div>
+                            </div>
+                            <div class="result__img">
+                                <img src="assets/img/kationorm.png" alt="">
+                            </div>
+
+                        </div>
+                    </div>
                     <div class="osdi__paginations">
                         <ul class="osdi__paginations--bullets">
-                            <li class="pass" data-item="quest-1"></li>
-                            <li data-item="quest-2"></li>
                         </ul>
-                        <a data-next href="#" class="btn btn-light">Далее</a>
+                        <a data-next href="/" class="btn btn-light">Далее</a>
                     </div>
+                    <a data-result href="/" class="btn nofill">Пройти тест заново</a>
                 </div>
             </div>
         </main>
