--- a/osdi.html
+++ b/osdi.html
@@ -65,11 +65,11 @@
                     <div class="osdi__inner quiz">
                         <div class="current"></div>
                         <div class="osdi__item quiz__item active" data-item="1">
-                            <div class="quiz__title">
-                                Повышенная чувствительность к свету
-                            </div>
                             <div class="quiz__subtitle">
                                 Сталкивались ли вы со следующими симптомами на протяжении последней недели?
+                            </div>
+                            <div class="quiz__title">
+                                Повышенная чувствительность к свету
                             </div>
                             <small>
                                 Выберите подходящий вариант:
@@ -83,11 +83,11 @@
                             </ul>
                         </div>
                         <div class="osdi__item quiz__item" data-item="2">
-                            <div class="quiz__title">
-                                Ощущение песка в глазах
-                            </div>
                             <div class="quiz__subtitle">
                                 Сталкивались ли вы со следующими симптомами на протяжении последней недели?
+                            </div>
+                            <div class="quiz__title">
+                                Ощущение песка в глазах
                             </div>
                             <small>
                                 Выберите подходящий вариант:
@@ -101,11 +101,11 @@
                             </ul>
                         </div>
                         <div class="osdi__item quiz__item" data-item="3">
-                            <div class="quiz__title">
-                                Болезненность или воспалённые глаза
-                            </div>
                             <div class="quiz__subtitle">
                                 Сталкивались ли вы со следующими симптомами на протяжении последней недели?
+                            </div>
+                            <div class="quiz__title">
+                                Болезненность или воспалённые глаза
                             </div>
                             <small>
                                 Выберите подходящий вариант:
@@ -119,11 +119,11 @@
                             </ul>
                         </div>
                         <div class="osdi__item quiz__item" data-item="4">
-                            <div class="quiz__title">
-                                Помутнение зрения
-                            </div>
                             <div class="quiz__subtitle">
                                 Сталкивались ли вы со следующими симптомами на протяжении последней недели?
+                            </div>
+                            <div class="quiz__title">
+                                Помутнение зрения
                             </div>
                             <small>
                                 Выберите подходящий вариант:
@@ -137,11 +137,143 @@
                             </ul>
                         </div>
                         <div class="osdi__item quiz__item" data-item="5">
+                            <div class="quiz__subtitle">
+                                Сталкивались ли вы со следующими симптомами на протяжении последней недели?
+                            </div>
                             <div class="quiz__title">
                                 Плохое зрение
                             </div>
+                            <small>
+                                Выберите подходящий вариант:
+                            </small>
+                            <ul>
+                                <li data-value="4" class="btn">Все время</li>
+                                <li data-value="3" class="btn">Довольно часто</li>
+                                <li data-value="2" class="btn">Половину времени</li>
+                                <li data-value="1" class="btn">Иногда</li>
+                                <li data-value="0" class="btn">Никогда</li>
+                            </ul>
+                        </div>
+
+
+
+                        <div class="osdi__item quiz__item" data-item="6">
                             <div class="quiz__subtitle">
-                                Сталкивались ли вы со следующими симптомами на протяжении последней недели?
+                                Испытывали ли Вы проблемы со зрением, которые мешали Вашей повседневной активности на протяжении последней недели?
+                            </div>
+                            <div class="quiz__title">
+                                Чтение
+                            </div>
+                            <small>
+                                Выберите подходящий вариант:
+                            </small>
+                            <ul>
+                                <li data-value="4" class="btn">Все время</li>
+                                <li data-value="3" class="btn">Довольно часто</li>
+                                <li data-value="2" class="btn">Половину времени</li>
+                                <li data-value="1" class="btn">Иногда</li>
+                                <li data-value="0" class="btn">Никогда</li>
+                            </ul>
+                        </div>
+                        <div class="osdi__item quiz__item" data-item="7">
+                            <div class="quiz__subtitle">
+                                Испытывали ли Вы проблемы со зрением, которые мешали Вашей повседневной активности на протяжении последней недели?
+                            </div>
+                            <div class="quiz__title">
+                                Вождение автомобиля в тёмное время суток
+                            </div>
+                            <small>
+                                Выберите подходящий вариант:
+                            </small>
+                            <ul>
+                                <li data-value="4" class="btn">Все время</li>
+                                <li data-value="3" class="btn">Довольно часто</li>
+                                <li data-value="2" class="btn">Половину времени</li>
+                                <li data-value="1" class="btn">Иногда</li>
+                                <li data-value="0" class="btn">Никогда</li>
+                            </ul>
+                        </div>
+                        <div class="osdi__item quiz__item" data-item="8">
+                            <div class="quiz__subtitle">
+                                Испытывали ли Вы проблемы со зрением, которые мешали Вашей повседневной активности на протяжении последней недели?
+                            </div>
+                            <div class="quiz__title">
+                                Работа за компьютером или гаджетами
+                            </div>
+                            <small>
+                                Выберите подходящий вариант:
+                            </small>
+                            <ul>
+                                <li data-value="4" class="btn">Все время</li>
+                                <li data-value="3" class="btn">Довольно часто</li>
+                                <li data-value="2" class="btn">Половину времени</li>
+                                <li data-value="1" class="btn">Иногда</li>
+                                <li data-value="0" class="btn">Никогда</li>
+                            </ul>
+                        </div>
+                        <div class="osdi__item quiz__item" data-item="9">
+                            <div class="quiz__subtitle">
+                                Испытывали ли Вы проблемы со зрением, которые мешали Вашей повседневной активности на протяжении последней недели?
+                            </div>
+                            <div class="quiz__title">
+                                Просмотр телевизора
+                            </div>
+                            <small>
+                                Выберите подходящий вариант:
+                            </small>
+                            <ul>
+                                <li data-value="4" class="btn">Все время</li>
+                                <li data-value="3" class="btn">Довольно часто</li>
+                                <li data-value="2" class="btn">Половину времени</li>
+                                <li data-value="1" class="btn">Иногда</li>
+                                <li data-value="0" class="btn">Никогда</li>
+                            </ul>
+                        </div>
+
+
+
+                        <div class="osdi__item quiz__item" data-item="10">
+                            <div class="quiz__subtitle">
+                                Сталкивались ли вы с чувством дискомфорта в следующих ситуациях на протяжении последней недели?
+                            </div>
+                                <div class="quiz__title">
+                                    Ветреная погода
+                                </div>
+                            <small>
+                                Выберите подходящий вариант:
+                            </small>
+                            <ul>
+                                <li data-value="4" class="btn">Все время</li>
+                                <li data-value="3" class="btn">Довольно часто</li>
+                                <li data-value="2" class="btn">Половину времени</li>
+                                <li data-value="1" class="btn">Иногда</li>
+                                <li data-value="0" class="btn">Никогда</li>
+                            </ul>
+                        </div>
+                        <div class="osdi__item quiz__item" data-item="11">
+                            <div class="quiz__subtitle">
+                                Сталкивались ли вы с чувством дискомфорта в следующих ситуациях на протяжении последней недели?
+                            </div>
+                            <div class="quiz__title">
+                                Пребывание в местах с пониженной влажностью воздуха (очень сухой воздух)
+                            </div>
+                            <small>
+                                Выберите подходящий вариант:
+                            </small>
+                            <ul>
+                                <li data-value="4" class="btn">Все время</li>
+                                <li data-value="3" class="btn">Довольно часто</li>
+                                <li data-value="2" class="btn">Половину времени</li>
+                                <li data-value="1" class="btn">Иногда</li>
+                                <li data-value="0" class="btn">Никогда</li>
+                            </ul>
+                        </div>
+                        <div class="osdi__item quiz__item" data-item="12">
+                            <div class="quiz__subtitle">
+                                Сталкивались ли вы с чувством дискомфорта в следующих ситуациях на протяжении последней недели?
+                            </div>
+                            <div class="quiz__title">
+                                Нахождение в кондиционируемых помещениях
                             </div>
                             <small>
                                 Выберите подходящий вариант:
@@ -170,8 +302,98 @@
                             <p>Умеренные</p>
                             <p>Тяжёлые</p>
                         </div>
-                        <div class="result__wrapper">
+
+
+                        <div class="result__wrapper" data-result="">
                             <div class="result__info">
+                                <div class="result__diagnosis">Данное значение может свидетельствовать о нормальном состоянии вашей глазной поверхности</div>
+                            </div>
+                            <div class="result__img">
+                                <img src="assets/img/beauty-treatments-portrait 1.jpg" alt="">
+                            </div>
+                        </div>
+
+                        <div class="result__wrapper" data-result="ocurtears-gidro">
+                            <div class="result__info">
+                                <div class="result__diagnosis">Данное значение может свидетельствовать о лёгкой степени проявления симптомов болезни сухого глаза</div>
+                                <p>Данная информация не является основой для постановки окончательного диагноза. Носит
+                                    лишь рекомендательно-информационный характер. Для детальной диагностики и
+                                    окончательной постановки диагноза пожалуйста проконсультируйтесь с Вашим лечащим
+                                    доктором.
+                                </p>
+                                <div class="result__info--rec">
+                                    Исходя из значения индекса OSDI рекомендует: 
+                                </div>
+                                <div class="result__info--rectext">
+                                    Для поддержания здоровья Ваших глаз Вам может быть рекомендовано использование Окутиарз Гидро+
+                                </div>
+                                <div class="result__btns">
+                                    <a href="#" class="btn">Найти препарат в аптеках</a>
+                                    <i class="marker"></i>
+                                    <a href="#" class="btn btn-light">Инструкция для медицинского применения</a>
+                                </div>
+                            </div>
+                            <div class="result__img">
+                                <img src="assets/img/ocurtears.png" alt="">
+                            </div>
+                        </div>
+
+                        <div class="result__wrapper" data-result="ocurtears-alo">
+                            <div class="result__info">
+                                <div class="result__diagnosis">Данное значение может свидетельствовать о лёгкой степени проявления симптомов болезни сухого глаза</div>
+
+                                <p>Данная информация не является основой для постановки окончательного диагноза. Носит
+                                    лишь рекомендательно-информационный характер. Для детальной диагностики и
+                                    окончательной постановки диагноза пожалуйста проконсультируйтесь с Вашим лечащим
+                                    доктором.
+                                </p>
+                                <div class="result__info--rec">
+                                    Исходя из значения индекса OSDI рекомендует: 
+                                </div>
+                                <div class="result__info--rectext">
+                                    Для поддержания здоровья Ваших глаз Вам может быть рекомендовано использование Окутиарз Гидро+
+                                </div>
+                                <div class="result__btns">
+                                    <a href="#" class="btn">Найти препарат в аптеках</a>
+                                    <i class="marker"></i>
+                                    <a href="#" class="btn btn-light">Инструкция для медицинского применения</a>
+                                </div>
+                            </div>
+                            <div class="result__img">
+                                <img src="assets/img/247b776d-0a71-4ebd-96fb-451df1dbe469_2e92b9f7fd28f083b22e478ca7c71e00063942e457e75cfa3766ed1a2b6bd51d.webp" alt="">
+                            </div>
+                        </div>
+
+                        <div class="result__wrapper" data-result="kationorm">
+                            <div class="result__info">
+                                <div class="result__diagnosis">Данное значение может свидетельствовать об умеренных проявлениях симптомов болезни сухого глаза </div>
+
+                                <p>Данная информация не является основой для постановки окончательного диагноза. Носит
+                                    лишь рекомендательно-информационный характер. Для детальной диагностики и
+                                    окончательной постановки диагноза пожалуйста проконсультируйтесь с Вашим лечащим
+                                    доктором.
+                                </p>
+                                <div class="result__info--rec">
+                                    Исходя из значения индекса OSDI рекомендует:
+                                </div>
+                                <div class="result__info--rectext">
+                                    Для поддержания здоровья Ваших глаз Вам может быть рекомендовано использование Окутиарз Ало+
+                                </div>
+                                <div class="result__btns">
+                                    <a href="#" class="btn">Найти препарат в аптеках</a>
+                                    <i class="marker"></i>
+                                    <a href="#" class="btn btn-light">Инструкция для медицинского применения</a>
+                                </div>
+                            </div>
+                            <div class="result__img">
+                                <img src="assets/img/11cb10f6dfda0248086dd7092498.webp" alt="">
+                            </div>
+                        </div>
+
+                        <div class="result__wrapper" data-result="kationorm-unidoz">
+                            <div class="result__info">
+                                <div class="result__diagnosis">Данное значение может свидетельствовать о тяжелых проявлениях симптомов болезни сухого глаза</div>
+
                                 <p>Данная информация не является основой для постановки окончательного диагноза. Носит
                                     лишь рекомендательно-информационный характер. Для детальной диагностики и
                                     окончательной постановки диагноза пожалуйста проконсультируйтесь с Вашим лечащим
@@ -192,17 +414,18 @@
                                 </div>
                             </div>
                             <div class="result__img">
-                                <img src="assets/img/kationorm.png" alt="">
+                                <img src="assets/img/11cb10f6dfda0248086dd7092498.webp" alt="">
                             </div>
-
                         </div>
+
+
                     </div>
                     <div class="osdi__paginations">
                         <ul class="osdi__paginations--bullets">
                         </ul>
                         <a data-next href="/" class="btn btn-light">Далее</a>
                     </div>
-                    <a data-result href="/" class="btn nofill">Пройти тест заново</a>
+                    <a href="/" class="btn nofill add-result">Пройти тест заново</a>
                 </div>
             </div>
         </main>
