--- a/osdi.html
+++ b/osdi.html
@@ -13,12 +13,15 @@
         <header class="header">
             <div class="container">
                 <div class="header__wrapper">
-                    <img src="assets/img/icons/Santen_logo.svg" alt="" style="max-width: 150px;">
+                    <a href="index.html">
+                        <img src="assets/img/icons/Santen_logo.svg" alt="" style="max-width: 150px;">
+                        <small>Портал здоровых глаз</small>
+                    </a>
                     <div class="header__menu">
                         <div class="header__menu--btns">
-                            <a class="btn btn-light" href="#">Где купить</a>
-                            <i class="marker"></i>
-                            <a class="btn btn-blue menu-open" href="#">Menu</a>
+                            <!-- <a data-test class="btn btn-light" href="osdi.html">Пройдите тест OSDI</a>
+                            <i class="marker"></i> -->
+                            <a class="btn btn-blue menu-open" href="/">Menu</a>
                         </div>
                         <nav class="">
                             <ul>
@@ -351,7 +354,7 @@
                                     Исходя из значения индекса OSDI рекомендует: 
                                 </div>
                                 <div class="result__info--rectext">
-                                    Для поддержания здоровья Ваших глаз Вам может быть рекомендовано использование Окутиарз Гидро+
+                                    Для поддержания здоровья Ваших глаз Вам может быть рекомендовано использование Окутиарз Ало+
                                 </div>
                                 <div class="result__btns">
                                     <a href="#" class="btn">Найти препарат в аптеках</a>
@@ -377,7 +380,7 @@
                                     Исходя из значения индекса OSDI рекомендует:
                                 </div>
                                 <div class="result__info--rectext">
-                                    Для поддержания здоровья Ваших глаз Вам может быть рекомендовано использование Окутиарз Ало+
+                                    Для поддержания здоровья Ваших глаз Вам может быть рекомендовано использование Катионорм
                                 </div>
                                 <div class="result__btns">
                                     <a href="#" class="btn">Найти препарат в аптеках</a>
