--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
         <header class="header">
             <div class="container">
                 <div class="header__wrapper">
-                    <img src="assets/img/icons/Santen_logo.svg" alt="" style="max-width: 150px;">
+                    <a href="index.html">
+                        <img src="assets/img/icons/Santen_logo.svg" alt="" style="max-width: 150px;">
+                        <small>Портал здоровых глаз</small>
+                        </a>
                     <div class="header__menu">
                         <div class="header__menu--btns">
-                            <a class="btn btn-light" href="#">Где купить</a>
+                            <a data-test class="btn btn-light" href="osdi.html">Пройдите тест OSDI</a>
                             <i class="marker"></i>
-                            <a class="btn btn-blue menu-open" href="#">Menu</a>
+                            <a class="btn btn-blue menu-open" href="/">Menu</a>
                         </div>
                         <nav class="">
                             <ul>
@@ -44,7 +47,7 @@
                                 <div class="hero-home__offer--subtitle">(Ocutears® Hydro+)</div>
                                 <div class="hero-home__offer--title">Окутиарз® Гидро+</div>
                                 <p>Поперечно-связанная гиалуроновая кислота для терапии синдрома «сухого глаза»</p>
-                                <a href="#" class="btn btn-light">Купить</a>
+                                <a href="#" class="btn btn-light">Найти Окутиарз® Гидро+</a>
                             </div>
                             <div class="hero-home__img hero__img">
                                 <img src="assets/img/ocurtears.png" alt="">
